other/m-q/protect-node-taints/.chainsaw-test/chainsaw-step-04-apply-1.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: node-tainter
rules:
- apiGroups:
  - ""
  resources:
  - nodes
  verbs:
  - get
  - patch
